nix/hyprpanel/src/style/scss/menus/calendar.scss
$calendar-ui-scale: 1;
$calendar-card-gap: 0.65em;
$calendar-time-size: 2.9em;
$calendar-period-size: 1.2em;
$calendar-weather-icon-size: 3.05em;
$calendar-weather-temp-size: 1.65em;
$calendar-weather-condition-size: 0.86em;
$calendar-weather-stats-size: 0.82em;
$calendar-hourly-icon-size: 1.18em;

.calendar-menu-content * {
    font-size: $font-size * $bar-menus-menu-clock-scaling * 0.01 * $calendar-ui-scale;
}

.calendar-content-container {
    margin-top: 0em;
    min-width: 27em;
    min-height: 6em;
    background: if($bar-menus-monochrome, $bar-menus-background, $bar-menus-menu-clock-background-color);
    border: $bar-menus-border-size solid
        if($bar-menus-monochrome, $bar-menus-border-color, $bar-menus-menu-clock-border-color);
    border-radius: $bar-menus-border-radius;
    opacity: $bar-menus-opacity * 0.01;
}

.calendar-menu-item-container {
    border-radius: $bar-menus-card_radius;
    margin-bottom: $calendar-card-gap;
    background: if($bar-menus-monochrome, $bar-menus-cards, $bar-menus-menu-clock-card-color);
    border: none;

    &:last-child {
        margin-bottom: 0em;
    }
}

.calendar-content-items {
    margin: $menu-panel-outer-margin;
}

.calendar-container-box {
    margin: $menu-panel-outer-margin;
    margin-bottom: 0em;
}

.calendar-menu-widget {
    border-radius: 0.4em;
    color: if($bar-menus-monochrome, $bar-menus-text, $bar-menus-menu-clock-calendar-days);

    &:selected {
        box-shadow:
            inset 0 -0.5em 0 0 if($bar-menus-monochrome, $bar-menus-label, $bar-menus-menu-clock-calendar-currentday),
            inset -0.4em -0.3em 0 0 if($bar-menus-monochrome, $bar-menus-cards, $bar-menus-menu-clock-card-color),
            inset 0.4em 0 0 0.01em if($bar-menus-monochrome, $bar-menus-cards, $bar-menus-menu-clock-card-color);
        color: if($bar-menus-monochrome, $bar-menus-label, $bar-menus-menu-clock-calendar-currentday);
        border-radius: 0em;
    }

    &.header {
        background-color: transparent;
        color: if($bar-menus-monochrome, $bar-menus-label, $bar-menus-menu-clock-calendar-yearmonth);
    }

    &.button {
        color: $text;
        font-weight: 900;
        font-size: 900em;
    }

    &:hover {
        color: if($bar-menus-monochrome, $bar-menus-icons-active, $bar-menus-menu-clock-calendar-paginator);
    }

    &.highlight {
        color: if($bar-menus-monochrome, $bar-menus-icons-active, $bar-menus-menu-clock-calendar-weekdays);
    }

    &:indeterminate {
        color: transparentize(if($bar-menus-monochrome, $bar-menus-text, $bar-menus-menu-clock-calendar-days), 0.65);
    }

    font-size: 1.1em;
    padding: 0.35em;
}

.clock-content-items {
    min-height: 8em;

    .clock-content-time {
        font-size: $calendar-time-size;
        color: if($bar-menus-monochrome, $bar-menus-label, $bar-menus-menu-clock-time-time);
    }

    .clock-content-period {
        font-size: $calendar-period-size;
        margin-bottom: 1.35em;
        margin-right: -0.875em;
        color: if($bar-menus-monochrome, $bar-menus-label, $bar-menus-menu-clock-time-timeperiod);
    }
}

.weather-container-box {
    margin: 0.65em;
    min-width: 3em;

    .calendar-menu-weather.today {
        padding: 0.15em 0.15em 0.45em 0.15em;
    }

    .calendar-menu-weather.today.icon.container {
        min-width: 3.6em;
        margin-right: 0.75em;
    }

    .calendar-menu-weather.today.icon {
        label {
            color: if($bar-menus-monochrome, $bar-menus-icons-active, $bar-menus-menu-clock-time-time);
            font-size: $calendar-weather-icon-size;
        }
    }

    .calendar-menu-weather.today.temp.label {
        color: if($bar-menus-monochrome, $bar-menus-text, $bar-menus-text);
        margin-left: 0.2em;
        font-size: $calendar-weather-temp-size;
        font-weight: 700;

        &.icon {
            font-size: $calendar-weather-temp-size;
        }
    }

    .calendar-menu-weather.today.condition.label {
        color: if($bar-menus-monochrome, $bar-menus-label, $bar-menus-label);
        font-size: $calendar-weather-condition-size;
        margin-bottom: 0.2em;
        letter-spacing: 0.015em;
    }

    .calendar-menu-weather.today.temp.label.icon.weather-color.red {
        color: $red;
    }

    .calendar-menu-weather.today.temp.label.icon.weather-color.orange {
        color: $peach;
    }

    .calendar-menu-weather.today.temp.label.icon.weather-color.lavender {
        color: $lavender;
    }

    .calendar-menu-weather.today.temp.label.icon.weather-color.blue {
        color: $blue;
    }

    .calendar-menu-weather.today.temp.label.icon.weather-color.sky {
        color: $sky;
    }
}

.calendar-menu-weather.today.stats.container {
    margin-bottom: 0.25em;
    color: if($bar-menus-monochrome, $bar-menus-label, $bar-menus-label);
    font-size: $calendar-weather-stats-size;

    .weather {
        min-height: 1.35em;
    }

    .weather.label {
        margin-left: 0.3em;
        font-weight: 600;
    }
}

.menu-separator.weather {
    margin: 0.35em 0em 0.5em 0em;
    min-height: 0.06em;
    background: transparentize(if($bar-menus-monochrome, $bar-menus-border-color, $bar-menus-border-color), 0.65);
}

.hourly-weather-container {
    margin: 0em 0.05em 0.1em 0.05em;
}

.hourly-weather-item {
    padding: 0.28em 0.22em;
    border-radius: 0.34em;
}

.hourly-weather-time {
    color: if($bar-menus-monochrome, $bar-menus-label, $bar-menus-label);
    margin-bottom: 0.24em;
    font-size: 0.84em;
    font-weight: 600;
}

.hourly-weather-icon {
    color: if($bar-menus-monochrome, $bar-menus-icons-active, $bar-menus-icons-active);
    margin-bottom: 0.08em;
    font-size: $calendar-hourly-icon-size;
}

.hourly-weather-temp {
    color: if($bar-menus-monochrome, $bar-menus-label, $bar-menus-label);
    font-size: 0.9em;
    font-weight: 600;
}

.weather.precip.icon {
    min-width: 1em;
    font-size: 1em;
}

.weather.wind.icon {
    min-width: 1em;
    font-size: 1em;
}

